<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/ic_thumb_up_black_24dp"
        android:title="@string/title_like" />

    <item
        android:id="@+id/navigation_matchs"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/title_matchs" />

    <item
        android:id="@+id/navigation_radar"
        android:icon="@drawable/ic_location_searching_black_24dp"
        android:title="@string/radar" />

    <item
        android:id="@+id/navigation_my_likes"
        android:icon="@drawable/ic_supervisor_account_black_24dp"
        android:title="@string/my_likes" />

</menu>
